# tsplib-rs

./: .gitignore  CODEOWNERS  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/blossom-v/: Cargo.toml
crates/blossom-v-sys/: Cargo.toml  build.rs
crates/blossom-v-sys/cpp/: blossom_bridge.cpp
crates/blossom-v-sys/src/: lib.rs
crates/blossom-v/src/: errors.rs  lib.rs
crates/tsplib-core/: Cargo.toml
crates/tsplib-core/src/: context.rs  distances.rs  enums.rs  lib.rs  minimum_spanning_tree.rs  models.rs  reader.rs
crates/tsplib-core/src/enums/: algorithm_type.rs  data_section.rs  data_section_type.rs  display_data_type.rs  distance_source.rs  edge_data_format.rs  edge_weight_format.rs  edge_weight_type.rs  errors.rs  mod.rs  node_coord_type.rs  problem_type.rs
crates/tsplib-core/src/models/: graph.rs  mod.rs  node.rs  problem_instance.rs  tsp_solution.rs  tsplib_definition.rs  tsplib_instance.rs
crates/tsplib-dev-runner/: Cargo.toml
crates/tsplib-dev-runner/src/: main.rs
crates/tsplib-parser/: Cargo.toml
crates/tsplib-parser/src/: lib.rs  parser.rs
crates/tsplib-parser/src/parser/: errors.rs  mod.rs  sections.rs  specification.rs
crates/tsplib-server/: Cargo.toml
crates/tsplib-server/src/: errors.rs  main.rs  monitor.rs  state.rs
crates/tsplib-server/src/models/: mod.rs  requests.rs  responses.rs
crates/tsplib-server/src/routes/: algorithms.rs  cancel.rs  mod.rs  mst.rs  mwpm.rs  problems.rs  solutions.rs  solver.rs  solver_algorithms.rs
crates/tsplib-solver/: Cargo.toml
crates/tsplib-solver/src/: errors.rs  greedy.rs  held_carp.rs  held_karp.rs  lib.rs
crates/tsplib-solver/src/enums/: matcher_algorithm.rs  mod.rs  mst_algorithm.rs  solver_algorithm.rs
crates/tsplib-solver/src/matcher/: blossom_v.rs  blossom_v_unavailable.rs  edmonds.rs  greedy.rs  mod.rs  recursive.rs
crates/tsplib-solver/src/matcher/edmonds/: tests.rs
crates/tsplib-solver/src/solver/: christofides.rs  greedy.rs  held_karp.rs  linearprogramming.rs  lp_optimized.rs  lp_relaxation.rs  mod.rs  solver_options.rs
crates/tsplib-solver/src/solver/linearprogramming/: tests.rs
crates/tsplib-solver/src/solver/lp_relaxation/: tests.rs
frontend/: api.yaml  index.html  package-lock.json  package.json  server.js
