[workspace]
members = [
    "crates/tsplib-core",
    "crates/tsplib-dev-runner",
    "crates/tsplib-parser",
    "crates/tsplib-server",
    "crates/tsplib-solver",
]
resolver = "3"

[workspace.dependencies]
itertools = "0.14.0"
thiserror = "2.0.18"
serde = "1.0.228"
serde_json = "1.0.149"
tsplib-core = { path = "crates/tsplib-core" }
tsplib-parser = { path = "crates/tsplib-parser" }
tsplib-solver = { path = "crates/tsplib-solver" }
