[workspace]
members = [
    "crates/tsplib-core",
    "crates/tsplib-dev-runner",
    "crates/tsplib-parser",
    "crates/tsplib-server",
    "crates/tsplib-solver",
]
exclude = ["crates/blossom-v", "crates/blossom-v-sys"]
resolver = "3"

[workspace.dependencies]
itertools = "0.14.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tsplib-core = { path = "crates/tsplib-core" }
tsplib-parser = { path = "crates/tsplib-parser" }
tsplib-solver = { path = "crates/tsplib-solver" }
blossom-v = { path = "crates/blossom-v" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "=0.6.11", features = ["trace"] }
