[package]
name = "tsplib-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tsplib-core = { workspace = true }
axum = "0.8.9"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.52.3", features = ["full"] }
strum = { workspace = true }
