[package]
name = "tsplib-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tsplib-core = { workspace = true }
tsplib-parser = { workspace = true }
tsplib-solver = { workspace = true }
axum = "0.8.9"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
sysinfo = { version = "0.39.5", default-features = false, features = [
    "system",
] }

[features]
default = []
blossom-v = ["tsplib-solver/blossom-v"]
