[package]
name = "tsplib-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tsplib-core = { workspace = true }
blossom-v = { workspace = true, optional = true }

[features]
default = []
blossom-v = ["dep:blossom-v"]
